--- a/contribution/lang/pl.json
+++ b/contribution/lang/pl.json
@@ -82,11 +82,11 @@
  	 	 	 	"vars": [
  	 	 	 	 	"nextUpkeepDate"
  	 	 	 	],
- 	 	 	 	"trans": "Data następnej konserwacji: ${nextUpkeepDate}",
+ 	 	 	 	"trans": "Data następnego utrzymania: ${nextUpkeepDate}",
  	 	 	 	"eng": "Next upkeep Date: ${nextUpkeepDate}"
  	 	 	},
  	 	 	"insufficientError": {
- 	 	 	 	"trans": "zasób krytyczny",
+ 	 	 	 	"trans": "Zasoby krytyczne",
  	 	 	 	"eng": "resource critical"
  	 	 	},
  	 	 	"insufficientFound": {
@@ -122,7 +122,7 @@
  	 	 	"colors": {
  	 	 	 	"win": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Deszyfrowanie udane",
+ 	 	 	 	 	 	"trans": "Odszyfrowanie udane",
  	 	 	 	 	 	"eng": "Decryption successful"
  	 	 	 	 	},
  	 	 	 	 	"description": {
@@ -168,7 +168,7 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "Ludzie Ukrainy, Rosji i całego świata cierpią, ponieważ ambicja jednego człowieka.",
+ 	 	 	 	"trans": "Ludzie Ukrainy, Rosji i całego świata cierpią, przez ambicje jednego człowieka.",
  	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
@@ -190,7 +190,7 @@
  	 	 	 	"eng": "Withdraw"
  	 	 	},
  	 	 	"withdrawDesc": {
- 	 	 	 	"trans": "Weź Bitcoiny z banku",
+ 	 	 	 	"trans": "Wypłać Bitcoiny z banku",
  	 	 	 	"eng": "Take Bitcoins out of bank"
  	 	 	},
  	 	 	"putItemToVault": {
@@ -206,7 +206,7 @@
  	 	 	 	"eng": "Withdraw Item"
  	 	 	},
  	 	 	"takeItemFromVaultDesc": {
- 	 	 	 	"trans": "Weź przedmioty ze Skarbca",
+ 	 	 	 	"trans": "Wyjmij przedmioty ze Skarbca",
  	 	 	 	"eng": "Take items out from your vault"
  	 	 	},
  	 	 	"upgradeSlot": {
@@ -464,7 +464,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"itemSkipMinutes"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Pomiń wolny czas (${itemSkipMinutes} min)",
+ 	 	 	 	 	"trans": "Darmowe pominięcie czasu (${itemSkipMinutes} min)",
  	 	 	 	 	"eng": "Free time skip (${itemSkipMinutes} Min)"
  	 	 	 	},
  	 	 	 	"description": {
@@ -594,7 +594,7 @@
  	 	 	},
  	 	 	"areaEffect": {
  	 	 	 	"trans": "[AOE] Obszar działania, efekt tego przedmiotu będzie dotyczył sojuszników walczących z tobą.",
- 	 	 	 	"eng": "[AOE] Area of Effect, the effect of this item will apply allies in combat with you."
+ 	 	 	 	"eng": "[AOE] Area of Effect, the effect of this item will apply to allies in combat with you."
  	 	 	},
  	 	 	"equip": {
  	 	 	 	"trans": "Załóż",
@@ -673,7 +673,7 @@
  	 	 	 	},
  	 	 	 	"subtitle": {
  	 	 	 	 	"trans": "Proszę wstawić przedmiot",
- 	 	 	 	 	"eng": "Please inset an item"
+ 	 	 	 	 	"eng": "Please insert an item"
  	 	 	 	}
  	 	 	},
  	 	 	"selectItemButton": {
@@ -726,7 +726,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"repairFee"
  	 	 	 	],
- 	 	 	 	"trans": "Napraw wszystkie przedmioty (${repairFee} Bitcoin)",
+ 	 	 	 	"trans": "Napraw wszystkie przedmioty za (${repairFee} Bitcoin)",
  	 	 	 	"eng": " Repair all items for (${repairFee} Bitcoin)"
  	 	 	},
  	 	 	"molecularPrinter": {
@@ -739,14 +739,14 @@
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Drukowanie sprzętu jest oparte na rankingu drukowania, wyrównaj swoją rangę drukowania, drukowając więcej elementów",
+ 	 	 	 	 	 	"trans": "Drukowanie sprzętu jest oparte na poziomie drukowania, podnieś swój poziom drukowania, drukując więcej przedmiotów",
  	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
  	 	 	 	 	}
  	 	 	 	}
  	 	 	},
  	 	 	"buyUnit": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Kup Moduły",
+ 	 	 	 	 	"trans": "Kup Jednostki",
  	 	 	 	 	"eng": "Buy Unit"
  	 	 	 	}
  	 	 	}
@@ -926,7 +926,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"nextSlotSize"
  	 	 	 	],
- 	 	 	 	"trans": "Wydawaj Bitcoiny, aby zwiększyć liczbę przedmiotów, które możesz umieścić na swoim straganie w tym samym czasie",
+ 	 	 	 	"trans": "Wydaj Bitcoiny, aby zwiększyć liczbę przedmiotów, które możesz umieścić na swoim straganie w tym samym czasie",
  	 	 	 	"eng": "Spend Bitcoins to increase how many items you can put in your stall at the same time"
  	 	 	},
  	 	 	"cantEnterError": {
@@ -959,7 +959,7 @@
  	 	 	},
  	 	 	"stall": {
  	 	 	 	"sellItemButton": {
- 	 	 	 	 	"trans": "Umieść przedmiot na sprzedaż",
+ 	 	 	 	 	"trans": "Wystaw przedmiot na sprzedaż",
  	 	 	 	 	"eng": "Put Item On Sale"
  	 	 	 	},
  	 	 	 	"selectItemForSale": {
@@ -1013,7 +1013,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"points"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${points} Kontrola zawodu",
+ 	 	 	 	 	"trans": "${points} Kontrola Okupacji",
  	 	 	 	 	"eng": "${points} Occupation Control"
  	 	 	 	}
  	 	 	}
@@ -1076,7 +1076,7 @@
  	 	 	 	"eng": "Your account has been suspended automatically by the system due to Unusual Activity"
  	 	 	},
  	 	 	"content": {
- 	 	 	 	"trans": "Jeśli masz jakieś pytania, skontaktuj się z użytkownikiem Dexter bezpośrednio za pośrednictwem oficialnego Discorda (link można znaleźć w Pływającym Menu -> Linki) lub za pomocą e-mail: ching.huang.dexter@gmail.com",
+ 	 	 	 	"trans": "Jeśli masz jakieś pytania, skontaktuj się z użytkownikiem Dexter bezpośrednio przez oficialnego Discorda (link można znaleźć w Pływającym Menu -> Linki) lub za pomocą e-mail: ching.huang.dexter@gmail.com",
  	 	 	 	"eng": "If you have any questions please feel free to contact Dexter directly via official Discord (Link can be found in Floating Menu -> Links) or email to ching.huang.dexter@gmail.com"
  	 	 	}
  	 	},
@@ -1370,7 +1370,7 @@
  	 	 	 	"eng": "Welcome to"
  	 	 	},
  	 	 	"welcomeMsg": {
- 	 	 	 	"trans": "Najlepszy tekstowy MMMORPG",
+ 	 	 	 	"trans": "Najlepszy tekstowy MMORPG",
  	 	 	 	"eng": "the best text-based mmorpg"
  	 	 	},
  	 	 	"hasRefererCheckbox": {
@@ -1398,7 +1398,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"name"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Zaznaczono ${name} jako gracza polecającego",
+ 	 	 	 	 	"trans": "Wybrano ${name} jako gracza polecającego",
  	 	 	 	 	"eng": "You have set ${name} as your referer"
  	 	 	 	}
  	 	 	},
@@ -1546,14 +1546,14 @@
  	 	 	 	"vars": [
  	 	 	 	 	"playerCount"
  	 	 	 	],
- 	 	 	 	"trans": "${playerCount} gracz podłączony",
+ 	 	 	 	"trans": "${playerCount} gracz(y) podłączony(ch)",
  	 	 	 	"eng": "${playerCount} player(s) connected"
  	 	 	}
  	 	},
  	 	"equipmentUpgrade": {
  	 	 	"increaseSuccessButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Zwiększyć szybkość sukcesu",
+ 	 	 	 	 	"trans": "Zwiększyć szanse sukcesu",
  	 	 	 	 	"eng": "Increase Success Rate"
  	 	 	 	}
  	 	 	},
@@ -1564,7 +1564,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"failureRateNoBreak": {
- 	 	 	 	"trans": "Szansa na bezpieczną awarię",
+ 	 	 	 	"trans": "Szansa na bezpieczne niepowodzenie",
  	 	 	 	"eng": "Chance of safe failure"
  	 	 	},
  	 	 	"failureRate": {
@@ -1649,7 +1649,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "Wygasa w ${date}",
+ 	 	 	 	"trans": "Wygasa za ${date}",
  	 	 	 	"eng": "Expires in ${date}"
  	 	 	},
  	 	 	"empty": {
@@ -1681,15 +1681,15 @@
  	 	},
  	 	"login": {
  	 	 	"loginButton": {
- 	 	 	 	"trans": "Zaloguj sie",
+ 	 	 	 	"trans": "Zaloguj się",
  	 	 	 	"eng": "Login"
  	 	 	},
  	 	 	"forgotPassword": {
- 	 	 	 	"trans": "Zapomniałeś hasła?",
+ 	 	 	 	"trans": "Nie pamiętasz hasła?",
  	 	 	 	"eng": "Forgot Password?"
  	 	 	},
  	 	 	"registerPageButton": {
- 	 	 	 	"trans": "Zarejestruj się?",
+ 	 	 	 	"trans": "Utworzyć konto?",
  	 	 	 	"eng": "Create Account?"
  	 	 	}
  	 	},
@@ -1717,7 +1717,7 @@
  	 	},
  	 	"npcSellPage": {
  	 	 	"autoSell": {
- 	 	 	 	"trans": "Auto Sprzedam",
+ 	 	 	 	"trans": "Auto Sprzedawanie",
  	 	 	 	"eng": "Auto Sell"
  	 	 	}
  	 	},
@@ -1777,11 +1777,11 @@
  	 	},
  	 	"statsPage": {
  	 	 	"quitGang": {
- 	 	 	 	"trans": "Rzucić gang",
+ 	 	 	 	"trans": "Opuść gang",
  	 	 	 	"eng": "Quit Gang"
  	 	 	},
  	 	 	"logout": {
- 	 	 	 	"trans": "Wyloguj",
+ 	 	 	 	"trans": "Wyloguj się",
  	 	 	 	"eng": "Logout"
  	 	 	}
  	 	},
@@ -3740,7 +3740,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Odłamek, który zawiera zaawansowane exploity. \t\n         Może być używany do naruszenia systemów, takich jak twierdza danych Shangri-La",
- 	 	 	 	"eng": "A shard that contains advance exploits. \r\n        Can be used to breach systems such as Shangri-la Data Fortress"
+ 	 	 	 	"eng": "A shard that contains advanced exploits. \r\n        Can be used to breach systems such as Shangri-la Data Fortress"
  	 	 	}
  	 	},
  	 	"christmasGift": {
@@ -4070,7 +4070,7 @@
  	 	"unitExchange": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Chcesz kupić, czy wykorzystać swoje Moduły?"
+ 	 	 	 	 	"Chcesz kupić, czy wykorzystać swoje Jednostki?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Do you want to buy Units, or use your Units?"
@@ -4092,7 +4092,7 @@
  	 	"cosmetic": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Cześć! Zostaw donację by otrzymać dodatki kosmetyczne oraz wspierać gry Free-to-Win takie jak ta!"
+ 	 	 	 	 	"Cześć! Zostaw dotację by otrzymać dodatki kosmetyczne oraz wspierać gry Free-to-Win takie jak ta!"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hi! Donate to get cosmetic perks and to help support Free-to-Win games like this one!"
@@ -4172,14 +4172,14 @@
  	 	"store": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Hej dzieciaku... Obejrzyj mój towar."
+ 	 	 	 	 	"Hej dzieciaku... Obczaj mój towar."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid... Come check out my goods."
  	 	 	 	]
  	 	 	},
  	 	 	"name": {
- 	 	 	 	"trans": "Market Leczniczy",
+ 	 	 	 	"trans": "Market Trinoky",
  	 	 	 	"eng": "Trinoky Mart"
  	 	 	}
  	 	},
@@ -4237,7 +4237,7 @@
  	 	 	 	"eng": "A family run trading shop that lets you trade with what they have found while scavenging"
  	 	 	},
  	 	 	"canAccessError": {
- 	 	 	 	"trans": "Musisz miec przynajmniej 10 poziom, aby uzyskać dostęp do Kupca",
+ 	 	 	 	"trans": "Musisz mieć przynajmniej 10 poziom, aby uzyskać dostęp do Kupca",
  	 	 	 	"eng": "You need to be at least level 10 to access merchant"
  	 	 	}
  	 	},
@@ -4279,7 +4279,7 @@
  	 	 	 	"eng": "work in printing factory"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Popraw swój ranking drukowania bez poświęcania złomu technicznego, w celu zwiększenia poziomu twoich wydruków.",
+ 	 	 	 	"trans": "Popraw swój poziom drukowania bez poświęcania złomu, w celu zwiększenia poziomu twoich wydruków.",
  	 	 	 	"eng": "Improve Printing Rank without sacrificing tech scrap, this may help to increase the level of your prints."
  	 	 	}
  	 	},
@@ -4438,11 +4438,11 @@
  	 	 	},
  	 	 	"exp": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Otrzymaj doświadczenie",
+ 	 	 	 	 	"trans": "Otrzymaj punkty doświadczenia",
  	 	 	 	 	"eng": "Receive exp"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Otrzymaj doświadczenie z dowolnego źródła",
+ 	 	 	 	 	"trans": "Otrzymaj punkty doświadczenia z dowolnego źródła",
  	 	 	 	 	"eng": "Receive exp from any source"
  	 	 	 	}
  	 	 	},
@@ -4689,7 +4689,7 @@
  	 	 	 	 	"enemyName",
  	 	 	 	 	"value"
  	 	 	 	],
- 	 	 	 	"trans": "${enemyName} Zaatakowałem cię, otrzymałem obrażenia ${value}",
+ 	 	 	 	"trans": "${enemyName} Zaatakował cię, otrzymano ${value} obrażeń",
  	 	 	 	"eng": "${enemyName} attacked you, received ${value} damage"
  	 	 	},
  	 	 	"playerAttack": {
@@ -4697,7 +4697,7 @@
  	 	 	 	 	"enemyName",
  	 	 	 	 	"value"
  	 	 	 	],
- 	 	 	 	"trans": "Zaatakowałeś ${enemyName}, zajmując się obrażeniami ${value}",
+ 	 	 	 	"trans": "Zaatakowałeś ${enemyName}, zadając ${value} obrażeń",
  	 	 	 	"eng": "You attacked ${enemyName}, dealing ${value} damage"
  	 	 	}
  	 	}
@@ -4795,7 +4795,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"zoneName"
  	 	 	 	],
- 	 	 	 	"trans": "Zaproś ${zoneName}",
+ 	 	 	 	"trans": "Najedź ${zoneName}",
  	 	 	 	"eng": "invade ${zoneName}"
  	 	 	},
  	 	 	"description": {
@@ -5126,17 +5126,17 @@
  	 	 	 	"vars": [
  	 	 	 	 	"amount"
  	 	 	 	],
- 	 	 	 	"trans": "Przekażesz ${amount} Modułów z konta",
+ 	 	 	 	"trans": "Przekażesz ${amount} Jednostek z konta",
  	 	 	 	"eng": "This will donate ${amount} Unit from your account"
  	 	 	},
  	 	 	"notEnough": {
- 	 	 	 	"trans": "Nie masz wystarczającej ilości Modułów do przekazania.",
- 	 	 	 	"eng": "You do not have enough Unit to donate."
+ 	 	 	 	"trans": "Nie masz wystarczającej ilości Jednostek do przekazania.",
+ 	 	 	 	"eng": "You do not have enough Units to donate."
  	 	 	}
  	 	},
  	 	"chatMessage": {
  	 	 	"block": {
- 	 	 	 	"trans": "Blok",
+ 	 	 	 	"trans": "Zablokuj",
  	 	 	 	"eng": "Block"
  	 	 	},
  	 	 	"openPlayerProfile": {
@@ -5162,7 +5162,7 @@
  	 	},
  	 	"block": {
  	 	 	"title": {
- 	 	 	 	"trans": "Czy na pewno chcesz zablokować ten odtwarzacz?",
+ 	 	 	 	"trans": "Czy na pewno chcesz zablokować tego gracza?",
  	 	 	 	"eng": "Are you sure you want to block this player?"
  	 	 	}
  	 	},
@@ -5184,11 +5184,11 @@
  	 	 	 	"eng": "No inappropriate language."
  	 	 	},
  	 	 	"footer": {
- 	 	 	 	"trans": "Zostaniesz WYCISZONY, jeśli naruszasz jakiekolwiek zasady",
+ 	 	 	 	"trans": "Zostaniesz WYCISZONY, jeśli naruszysz jakiekolwiek zasady",
  	 	 	 	"eng": "You will be MUTED if you breach any of the rules"
  	 	 	},
  	 	 	"footer2": {
- 	 	 	 	"trans": "Pełną listę zasad można znaleźć w Profilu > Samouczek > Reguły",
+ 	 	 	 	"trans": "Pełną listę zasad można znaleźć w Profilu > Samouczek > Zasady",
  	 	 	 	"eng": "Full list of rules can be found in Profile > Tutorials > Rules"
  	 	 	},
  	 	 	"agreeToggle": {
@@ -5280,7 +5280,7 @@
  	 	},
  	 	"playerSearch": {
  	 	 	"searchPlayerHint": {
- 	 	 	 	"trans": "Wyszykaj gracza",
+ 	 	 	 	"trans": "Wyszukaj gracza",
  	 	 	 	"eng": "Enter player name to search"
  	 	 	},
  	 	 	"noPlayerFound": {
@@ -5446,14 +5446,14 @@
  	 	 	"vars": [
  	 	 	 	"price"
  	 	 	],
- 	 	 	"trans": "${price} Modułów",
+ 	 	 	"trans": "${price} Jednostek",
  	 	 	"eng": "${price} Unit"
  	 	},
  	 	"unitPriceDiscountEndDate": {
  	 	 	"vars": [
  	 	 	 	"date"
  	 	 	],
- 	 	 	"trans": "Zniżka kończy się w ${date}",
+ 	 	 	"trans": "Zniżka kończy się za ${date}",
  	 	 	"eng": "Discount ends in ${date}"
  	 	},
  	 	"permanentDescription": {
