--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -3521,11 +3521,11 @@
  	 	},
  	 	"clanExp": {
  	 	 	"name": {
- 	 	 	 	"trans": "[Gang] Fragment de mémoire de gang crypté",
+ 	 	 	 	"trans": "[Gang] Éclat de mémoire de gang crypté",
  	 	 	 	"eng": "encrypted gang memory shard"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Un Éclat de mémoire qui contient des secrets de gang cryptés, \r\n        décrypte-le dans le quartier général de ton gang pour obtenir des informations utiles (nécessite d'être dans un gang)",
+ 	 	 	 	"trans": "Un éclat de mémoire qui contient des secrets de gang cryptés, \r\n        décrypte-le dans le quartier général de ton gang pour obtenir des informations utiles (nécessite d'être dans un gang)",
  	 	 	 	"eng": "A memory shard contains encrypted gang secrets, \r\n        decrypt this in your gang headquarters to gain useful intel (requires to be in a gang)"
  	 	 	}
  	 	},
@@ -3735,7 +3735,7 @@
  	 	},
  	 	"hackTool": {
  	 	 	"name": {
- 	 	 	 	"trans": "[Gang] Éclat de violation du protocole",
+ 	 	 	 	"trans": "[Gang] Éclat de violation de protocole",
  	 	 	 	"eng": "Protocol Breach Shard"
  	 	 	},
  	 	 	"description": {
