--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -1030,7 +1030,7 @@
  	 	 	 	 	 	"eng": "Cyberspace hacking in progress"
  	 	 	 	 	},
  	 	 	 	 	"subtitle": {
- 	 	 	 	 	 	"trans": "Joins tes forces à celles d'autres NetRunners pour t'introduire dans la forteresse SL-Data afin de de faire profiter tous les joueurs d'améliorations.",
+ 	 	 	 	 	 	"trans": "Joins tes forces à celles d'autres NetRunners pour t'introduire dans la forteresse SL-Data afin de faire profiter tous les joueurs d'améliorations.",
  	 	 	 	 	 	"eng": "Join forces with other Netrunners to breach the SL-Data Fortress to grant all players with buff"
  	 	 	 	 	}
  	 	 	 	},
